[gd_scene load_steps=2 format=3 uid="uid://c1miqjqy05euk"]

[ext_resource type="Script" path="res://Scenes/CardSlots/Scrpt_CardSlots.gd" id="1_qok8t"]

[node name="CardSlots" type="Node2D"]
script = ExtResource("1_qok8t")

[node name="Row1" type="Node2D" parent="."]

[node name="Slot1" type="Node2D" parent="Row1"]
position = Vector2(98, 0)

[node name="Slot2" type="Node2D" parent="Row1"]
position = Vector2(294, 0)

[node name="Slot3" type="Node2D" parent="Row1"]
position = Vector2(490, 0)

[node name="Slot4" type="Node2D" parent="Row1"]
position = Vector2(686, 0)

[node name="Slot5" type="Node2D" parent="Row1"]
position = Vector2(882, 0)

[node name="Slot6" type="Node2D" parent="Row1"]
position = Vector2(1078, 0)

[node name="Row2" type="Node2D" parent="."]
position = Vector2(0, -272)
scale = Vector2(1, 0.8)

[node name="Slot1" type="Node2D" parent="Row2"]
position = Vector2(98, 0)

[node name="Slot2" type="Node2D" parent="Row2"]
position = Vector2(294, 0)

[node name="Slot3" type="Node2D" parent="Row2"]
position = Vector2(490, 0)

[node name="Slot4" type="Node2D" parent="Row2"]
position = Vector2(686, 0)

[node name="Slot5" type="Node2D" parent="Row2"]
position = Vector2(882, 0)

[node name="Slot6" type="Node2D" parent="Row2"]
position = Vector2(1078, 0)
